# tayni-mcp

./: Cargo.toml  README.md  claude_desktop_config.json
src/: main.rs  protocol.rs  tools.rs
tests/: integration_tests.rs
