[package]
name = "tayni-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP Server for TAYNI compiler - enables AI agents to compile TAYNI code"
license = "MIT"
repository = "https://github.com/NELAIA-AI/tayni-mcp"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "io-std"] }
base64 = "0.22"
tempfile = "3"
thiserror = "2"

[[bin]]
name = "tayni-mcp"
path = "src/main.rs"
